--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,9 +6,9 @@
         <item name="android:editTextBackground">@drawable/custom_edit_text_holo_light</item>
     </style>
 
-    <color name="main">#A1B389</color>
-    <color name="main_light">#99AA81</color>
-    <color name="main_dark">#5B654D</color>
-    <color name="main_dark_light">#6B7659</color>
-    <color name="error">#83392F</color>
+    <color name="main">#67A7C2</color>
+    <color name="main_light">#5F9EB7</color>
+    <color name="main_dark">#3B606F</color>
+    <color name="main_dark_light">#437181</color>
+    <color name="error">#FFFFFF</color>
 </resources>
