--- a/app/src/main/res/anim/alpha_out.xml
+++ b/app/src/main/res/anim/alpha_out.xml
@@ -2,6 +2,6 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <alpha
         android:fromAlpha="1.0"
-        android:toYDelta="0.0"
-        android:duration="100"/>
+        android:toAlpha="0.0"
+        android:duration="@android:integer/config_shortAnimTime"/>
 </set>
